<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_c">C</string>
    <string name="btn_bracket">()</string>
    <string name="btn_percent">%</string>
    <string name="btn_division">/</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_addition">+</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_pn">+/-</string>
    <string name="btn_dot">.</string>
    <string name="btn_equals">=</string>
    <string name="Edit_txt">0</string>
    <string name="btn_remove">\u232B</string>
    <string name="txt_out" />
    <string name="txt_input" />
</resources>